# cru-ansible-modules

./: .gitignore  .oramods.py.swp  CHANGELOG.md  CONTRIBUTING.md  README.md  bashmodexample  compver.py  databases.yml  dbfacts.py  escpass.py  finrest.py  linkmapper.py  lsnr_up.py  mkalias.py  orafacts.py  orafacts.py.orig  oramemck.py  oramods.py  rds-snapshot.py  rdssnap.py  redologs.py  rmancat.py  rmandbid.py  rmanfacts.py  rmtnsentry.py  rmxctrl.py  rundbcmd.py  sectblcnt.py  setcntrlfile.py  sourcefacts.py  sourcefacts_BACKUP_7943.py  sourcefacts_LOCAL_7943.py  splitout.py  srcdbfacts.py  srvctl.py  srvctl2.py  srvctl_2.py  srvctl_3.py  srvctl_orig  sysdbafacts.py  (+3 more)
crupac/: LICENSE.txt  README.md  config.py  cru_sec.py  cx.py  data.tf  dbug.py  setup.cfg  setup.py  utils.py
pymods/: README.md  crumods.py
