[metadata]
name = 'crupac-pkg'
version = 0.0.1
author = 'Sam Kohler'
author_email = 'sam.kohler@cru.org'
description = 'Cru custom python code for modules and Utils a GUI wrapper for our Ansible playbooks'
long_description = file: README.md
url = https://github.com/CruGlobal/cru-ansible-modules
classifiers =
    Programming Language :: Python :: 3
    License :: MIT (X11) License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
